--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,11 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+html {
+	scroll-behavior: smooth;
+}
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	background: url("./images/Dark.svg") no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
 }
 
 .container {
@@ -22,9 +18,11 @@ body {
 	-o-background-size: cover;
 	background-size: cover;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
+	max-height: max-content;
 	transition: all 0.1s linear;
 }
 
@@ -39,7 +37,8 @@ body {
 .App {
 	background-color: #f1f1e6;
 	width: 80%;
-	height: 500px;
+	/* height: 500px; */
+	margin-top: 30px;
 	border-radius: 10px;
 }
 
@@ -50,10 +49,12 @@ body {
 	.App {
 		width: 100%;
 		height: auto;
+		margin: 0;
 	}
 	.container {
 		background: none;
 		height: auto;
+		width: 100%;
 	}
 }
 
