--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,75 +1,143 @@
-.Projects {
+.project-dark {
+	color: rgb(194, 194, 194);
+	background-color: #131515;
+}
+.project-light {
+	color: rgb(65, 65, 65);
 	background-color: white;
-	color: #151315;
-	/* height: 100%; */
-	width: 100%;
-	transition: all 0.4s linear;
-	padding: 10px;
-	border-end-end-radius: 10px;
-	border-end-start-radius: 10px;
+}
+.project {
+	width: 80%;
+	margin-top: 50px;
+	padding: 20px;
+	border-radius: 10px;
 }
 
-.Projects-dark {
-	background-color: #151315;
-	color: #e0e0da;
+.project-title {
+	display: flex;
+	align-items: center;
+	font-weight: bold;
+	margin-bottom: 20px;
+	font-size: 18px;
 }
 
-.Projects-grid {
-	display: grid;
-	/* height: 100%; */
-	width: 100%;
-	grid-template-columns: 1fr 1fr 1fr;
-	transition: all 0.4s linear;
-	gap: 20px;
+.project-title img {
+	margin-right: 10px;
 }
 
 .project-item {
-	background-color: #2b374d;
-	border-radius: 5px;
-	/* height: 300px; */
-}
-
-.project-item h1 {
-	text-align: center;
-	text-transform: capitalize;
-	margin-bottom: 10px;
-}
-
-.project-btn-dark {
-	color: #e0e0da;
-	background-color: #0d1626;
-	padding: 5px 10px;
-	text-align: center;
-	margin: auto;
-	font-size: 1rem;
-	border-radius: 5px;
-}
-
-.project-btn-light {
-	background-color: #e0e0da;
-	color: #0d1626;
-	transition: all 0.4s linear;
-}
-.project-item-light {
-	background-color: #e0e0da;
-}
-
-.project-item img {
+	display: flex;
+	justify-content: space-between;
 	width: 100%;
-	margin-bottom: 10px;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
+	/* align-items: center; */
 }
 
-.project-btn {
+.project-img {
+	width: 90%;
+	border: 2px black solid;
+	border-radius: 5px;
+}
+
+.project-img img {
+	width: 100%;
+}
+
+.project-info {
+	/* width: 50%; */
+	text-align: end;
+}
+
+.project-info h1 {
+	font-weight: bold;
+	margin-bottom: 20px;
+	font-size: 1.7rem;
+}
+
+.project-info p {
+	margin-left: 10px;
+	font-weight: 600;
+}
+
+.project-tech {
+	display: flex;
+	justify-content: space-between;
+	margin: 0px 10px;
+	align-items: center;
+	margin-top: 30px;
+}
+.project-tech span {
+	/* margin-right: 10px; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.project-icons {
+	font-size: 2.3rem;
+}
+
+.project-icons-dark {
+	color: #213d5c;
+}
+.project-icons-light {
+	color: #73a7b6;
+}
+
+.project-btn-group {
+	width: 100%;
+	margin-top: 50px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-bottom: 10px;
 }
+
+.project-btn-group a {
+	padding: 10px;
+	border: none;
+	background-color: #73a7b6;
+	color: rgb(37, 36, 36);
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.project-btn-1 {
+	margin-right: 30px;
+}
+
+.project-btn-1,
+.project-btn-2 {
+	transition: all 500ms ease;
+	font-weight: 500;
+}
+
+.project-btn-1:hover,
+.project-btn-2:hover {
+	background-color: #4e8d9e;
+}
+
 @media screen and (max-width: 600px) {
-	.Projects-grid {
-		grid-template-columns: 1fr;
-		gap: 10px;
+	.project {
+		width: 100%;
+		margin-top: 0px;
+		border-radius: 0px;
+	}
+	.project-item {
+		flex-direction: column;
+		justify-content: center;
+	}
+	.project-info {
+		width: 100%;
+		text-align: center;
+	}
+	.project-img {
+		width: 100%;
+		margin-bottom: 20px;
+	}
+	.project-tech {
+		margin: 0px;
+		margin-top: 30px;
+	}
+	.project-btn-group {
+		margin-top: 30px;
 	}
 }
