--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -115,6 +115,9 @@
 	background-color: #4e8d9e;
 }
 
+.project-2 {
+	margin-top: 40px;
+}
 @media screen and (max-width: 600px) {
 	.project {
 		width: 100%;
