--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -39,11 +39,11 @@
 }
 
 .contact-up {
-	transition: all 500ms ease;
+	transition: all 300ms ease-in;
 	padding: 5px;
+	border-radius: 100%;
 }
 .contact-up:hover {
-	border-radius: 100%;
 	color: #fff;
 }
 .contact-up-light:hover {
