--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -26,20 +26,21 @@
 }
 
 .project-item {
-	display: flex;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 	width: 100%;
 	/* align-items: center; */
 }
 
 .project-img {
-	width: 90%;
 	border: 2px black solid;
 	border-radius: 5px;
 }
 
 .project-img img {
 	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .project-info {
@@ -60,7 +61,7 @@
 
 .project-tech {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	margin: 0px 10px;
 	align-items: center;
 	margin-top: 30px;
@@ -125,7 +126,8 @@
 		border-radius: 0px;
 	}
 	.project-item {
-		flex-direction: column;
+		grid-template-columns: 1fr;
+		/* flex-direction: column; */
 		justify-content: center;
 	}
 	.project-info {
